# founder-context-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/answer/: llm.py  pipeline.py  prompts.py
app/api/: ask.py  health.py  search.py  stats.py
app/embed/: embedder.py
app/ingest/: base.py  gcal.py  gmail.py  linear.py  slack.py
app/retrieve/: chunker.py  hybrid.py
app/store/: db.py  repository.py  schema.sql
app/web/: index.html
data/fixtures/: gcal.json  gmail.json  linear.json  slack.json
evals/: golden.json  run.py
scripts/: ingest.py
tests/: conftest.py  test_grounding.py  test_normalize.py  test_retrieval.py
